# capcut-mate-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: dev.yml
src/router/: router.py
src/utils/: logger.py
