[project]
name = "capcut-mate"
version = "1.0.0"
description = "CapCut Mate API Service"
authors = [
    { name = "Hommy", email = "taohongmin51@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.100.0",
    "fastapi-mcp>=0.4.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn[standard]>=0.35.0",
]
